# ifopt

./: CMakeLists.txt  ifopt-config.cmake
ifopt_core/: CMakeLists.txt
ifopt_ipopt/: CMakeLists.txt
ifopt_ipopt/cmake/: FindIPOPT.cmake
ifopt_nlopt/: CMakeLists.txt
ifopt_nlopt/include/ifopt/: nlopt_solver.h
ifopt_nlopt/src/: nlopt_solver.cc
ifopt_nlopt/test/: ex_test_nlopt.cc
ifopt_snopt/: CMakeLists.txt
